chore: remove shebang and functions
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/config/armbian/armbian-defaults.conf
+++ b/config/armbian/armbian-defaults.conf
@@ -1,8 +1,4 @@
-#!/usr/bin/env bash
-# Shebang for better file detection
-
-# Declare Variables before exporting.
-# See https://www.shellcheck.net/wiki/SC2155
+# Armbian build default configuration
 
 # Download Base Url
 DOWNLOAD_BASE_URL="https://github.com/mainsail-crew/armbian-builds/releases/latest/download"
@@ -18,27 +14,18 @@ BASE_IMAGE_RASPBIAN="no"
 
 # partition resizing
 BASE_ROOT_PARTITION="2"
-BASE_IMAGE_ENLARGEROOT=2500
-BASE_IMAGE_RESIZEROOT=600
+BASE_IMAGE_ENLARGEROOT="2500"
+BASE_IMAGE_RESIZEROOT="600"
+
 # Compress not needed due compression done in workflow
-BASE_RELEASE_COMPRESS=no
+BASE_RELEASE_COMPRESS="no"
+
+# Armbian architecture
+BASE_ARCH="arm64"
+
 # Modules are valid for 32bit and 64bit images
-# MODULES="base,pkgupgrade,udev_fix,armbian(armbian_net,mainsailos,klipper,is_req_preinstall,moonraker,mainsail,timelapse,crowsnest,sonar)"
-MODULES="base(errorout)"
-# export Variables
-export DOWNLOAD_BASE_URL
-export BASE_ADD_USER
-export BASE_USER
-export BASE_USER_PASSWORD
-export BASE_DISTRO
-export BASE_IMAGE_RASPBIAN
-export BASE_ROOT_PARTITION
-export BASE_IMAGE_ENLARGEROOT
-export BASE_IMAGE_RESIZEROOT
-export BASE_RELEASE_COMPRESS
-export MODULES
+MODULES="base,pkgupgrade,udev_fix,armbian(armbian_net,mainsailos,klipper,is_req_preinstall,moonraker,mainsail,timelapse,crowsnest,sonar)"
 
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
-# shellcheck disable=SC2034
 JSON_DESCRIPTION="A port of Armbian with preinstalled Klipper/Moonraker/Mainsail for 3D printers"
