--- a/config/orangepi/orangepi_zero2.conf
+++ b/config/orangepi/orangepi_zero2.conf
@@ -1,8 +1,4 @@
-#!/usr/bin/env bash
-# Shebang for better file detection
-# shellcheck enable=require-variable-braces
-
-BASE_ARCH="arm64"
+# OrangePi Zero 2 configuration
 
 # Image source
 DOWNLOAD_URL_CHECKSUM="${DOWNLOAD_BASE_URL}/orangepi-orangepi_zero2_bullseye.img.xz.sha256"
