--- a/config/raspberry/rpi-64bit.conf
+++ b/config/raspberry/rpi-64bit.conf
@@ -1,8 +1,4 @@
-#!/usr/bin/env bash
-# Shebang for better file detection
-
-# Declare Variables before exporting.
-# See https://www.shellcheck.net/wiki/SC2155
+# Raspberry PiOS 64bit configuration
 
 BASE_ARCH="arm64"
 
@@ -14,13 +10,6 @@ BASE_ARCH="arm64"
 DOWNLOAD_URL_CHECKSUM="https://downloads.raspberrypi.com/raspios_oldstable_lite_arm64/images/raspios_oldstable_lite_arm64-2023-10-10/2023-05-03-raspios-bullseye-arm64-lite.img.xz.sha256"
 DOWNLOAD_URL_IMAGE="https://downloads.raspberrypi.com/raspios_oldstable_lite_arm64/images/raspios_oldstable_lite_arm64-2023-10-10/2023-05-03-raspios-bullseye-arm64-lite.img.xz.torrent"
 
-
-# export variables
-export BASE_ARCH
-export DOWNLOAD_URL_CHECKSUM
-export DOWNLOAD_URL_IMAGE
-
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
-# shellcheck disable=SC2034
 JSON_SUPPORTED_SBC="pi3-64bit pi4-64bit"
