--- a/config/raspberry/rpi-defaults.conf
+++ b/config/raspberry/rpi-defaults.conf
@@ -1,8 +1,4 @@
-#!/usr/bin/env bash
-# Shebang for better file detection
-
-# Declare Variables before exporting.
-# See https://www.shellcheck.net/wiki/SC2155
+# Raspberry PiOS default configuration
 
 BASE_IMAGE_ENLARGEROOT=4500
 BASE_IMAGE_RESIZEROOT=600
@@ -11,11 +7,6 @@ BASE_RELEASE_COMPRESS=no
 # Modules are valid for 32bit and 64bit images
 MODULES="base,pkgupgrade,udev_fix,mainsailos(net,piconfig,klipper,is_req_preinstall,moonraker,timelapse,mainsail,crowsnest,sonar,password-for-sudo),postrename"
 
-# export Variables
-export BASE_IMAGE_ENLARGEROOT
-export BASE_IMAGE_RESIZEROOT
-export BASE_RELEASE_COMPRESS
-export MODULES
 
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
