--- a/config/armbian/orangepi4lts.conf
+++ b/config/armbian/orangepi4lts.conf
@@ -1,17 +1,8 @@
-#!/usr/bin/env bash
-# Shebang for better file detection
-# shellcheck enable=require-variable-braces
-
-BASE_ARCH="arm64"
+# OrangePi 4 LTS configuration
 
 # Image source
 DOWNLOAD_URL_CHECKSUM="${DOWNLOAD_BASE_URL}/armbian-orangepi4_lts_bullseye.img.xz.sha256"
 DOWNLOAD_URL_IMAGE="${DOWNLOAD_BASE_URL}/armbian-orangepi4_lts_bullseye.img.xz"
-
-# export Variables
-export BASE_ARCH
-export DOWNLOAD_URL_CHECKSUM
-export DOWNLOAD_URL_IMAGE
 
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
