--- a/config/config-defaults.conf
+++ b/config/config-defaults.conf
@@ -1,29 +1,8 @@
-#!/usr/bin/env bash
-# Shebang for better file detection
-# shellcheck enable=require-variable-braces
-
-get_img_name() {
-    local -a types
-    types=(zip 7z xz)
-    if [ -n "${DIST_PATH}" ]; then
-        for i in "${types[@]}"; do
-            find "${DIST_PATH}/image/" -type f -name "*.${i}" -printf "%p\n"
-        done
-    fi
-
-    if [ -z "${DIST_PATH}" ]; then
-        echo ""
-    fi
-}
+# Build default configuration
 
 DIST_VERSION="1.3.2"
-BASE_ZIP_IMG="$(get_img_name)"
+# BASE_ZIP_IMG="$(get_img_name)"
 DIST_NAME="MainsailOS"
-
-# export Variables
-export DIST_NAME
-export DIST_VERSION
-export BASE_ZIP_IMG
 
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
