--- a/config/raspberry/rpi-32bit.conf
+++ b/config/raspberry/rpi-32bit.conf
@@ -1,8 +1,4 @@
-#!/usr/bin/env bash
-# Shebang for better file detection
-
-# Declare Variables before exporting.
-# See https://www.shellcheck.net/wiki/SC2155
+# Raspberry PiOS 32bit configuration
 
 # Keep for Bookworm template
 # DOWNLOAD_URL_CHECKSUM="https://downloads.raspberrypi.org/raspios_lite_armhf_latest.sha256"
@@ -11,9 +7,6 @@
 # New locations after Bullseye turned into 'oldstable'
 DOWNLOAD_URL_CHECKSUM="https://downloads.raspberrypi.com/raspios_oldstable_lite_armhf/images/raspios_oldstable_lite_armhf-2023-10-10/2023-05-03-raspios-bullseye-armhf-lite.img.xz.sha256"
 DOWNLOAD_URL_IMAGE="https://downloads.raspberrypi.com/raspios_oldstable_lite_armhf/images/raspios_oldstable_lite_armhf-2023-10-10/2023-05-03-raspios-bullseye-armhf-lite.img.xz.torrent"
-
-export DOWNLOAD_URL_CHECKSUM
-export DOWNLOAD_URL_IMAGE
 
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
