--- a/config/raspberry/rpi-64bit-klipperscreen.conf
+++ b/config/raspberry/rpi-64bit-klipperscreen.conf
@@ -1,8 +1,4 @@
-#!/usr/bin/env bash
-# Shebang for better file detection
-
-# Declare Variables before exporting.
-# See https://www.shellcheck.net/wiki/SC2155
+# Raspberry PiOS 64bit with KlipperScreen configuration
 
 BASE_ARCH="arm64"
 
@@ -14,16 +10,9 @@ BASE_ARCH="arm64"
 DOWNLOAD_URL_CHECKSUM="https://downloads.raspberrypi.com/raspios_oldstable_lite_arm64/images/raspios_oldstable_lite_arm64-2023-10-10/2023-05-03-raspios-bullseye-arm64-lite.img.xz.sha256"
 DOWNLOAD_URL_IMAGE="https://downloads.raspberrypi.com/raspios_oldstable_lite_arm64/images/raspios_oldstable_lite_arm64-2023-10-10/2023-05-03-raspios-bullseye-arm64-lite.img.xz.torrent"
 
-
 # Changed modules
 # shellcheck disable=SC2034
 MODULES="base,pkgupgrade,udev_fix,mainsailos(net,piconfig,klipper,is_req_preinstall,moonraker,timelapse,mainsail,klipperscreen,crowsnest,sonar,password-for-sudo),postrename"
-
-
-# export variables
-export BASE_ARCH
-export DOWNLOAD_URL_CHECKSUM
-export DOWNLOAD_URL_IMAGE
 
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
