chore: remove shellcheck entries
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/config/config-defaults.conf
+++ b/config/config-defaults.conf
@@ -6,14 +6,11 @@ DIST_NAME="MainsailOS"
 
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
-# shellcheck disable=SC2034
 JSON_PRETTY_NAME="Mainsail OS"
-# shellcheck disable=SC2034
 JSON_DESCRIPTION="A OS image with Klipper/Moonraker/Mainsail preinstalled for your 3D printers"
-# shellcheck disable=SC2034
 JSON_ICON_URL="https://os.mainsail.xyz/rpi-imager.png"
-# shellcheck disable=SC2034
 JSON_INIT_FORMAT="none"
-# shellcheck disable=SC2034
 JSON_SUPPORTED_SBC=""
+
+# Available RPI sbc's list
 # JSON_SUPPORTED_SBC="pi1-32bit pi2-32bit pi3-32bit pi3-64bit pi4-32bit pi4-64bit pi5-64bit"
