--- a/config/raspberry/rpi-64bit-klipperscreen.conf
+++ b/config/raspberry/rpi-64bit-klipperscreen.conf
@@ -7,8 +7,10 @@ BASE_ARCH="arm64"
 # DOWNLOAD_URL_IMAGE="https://downloads.raspberrypi.org/raspios_lite_arm64_latest.torrent"
 
 # New locations after Bullseye turned into 'oldstable'
-DOWNLOAD_URL_CHECKSUM="https://downloads.raspberrypi.com/raspios_oldstable_lite_arm64/images/raspios_oldstable_lite_arm64-2023-10-10/2023-05-03-raspios-bullseye-arm64-lite.img.xz.sha256"
-DOWNLOAD_URL_IMAGE="https://downloads.raspberrypi.com/raspios_oldstable_lite_arm64/images/raspios_oldstable_lite_arm64-2023-10-10/2023-05-03-raspios-bullseye-arm64-lite.img.xz.torrent"
+DOWNLOAD_BASE_URL="${DOWNLOAD_BASE_URL}/raspios_oldstable_lite_arm64/images/"
+DOWNLOAD_BASE_URL="${DOWNLOAD_BASE_URL}/raspios_oldstable_lite_arm64-2023-10-10/"
+DOWNLOAD_URL_CHECKSUM="${DOWNLOAD_BASE_URL}/2023-05-03-raspios-bullseye-arm64-lite.img.xz.sha256"
+DOWNLOAD_URL_IMAGE="${DOWNLOAD_BASE_URL}/2023-05-03-raspios-bullseye-arm64-lite.img.xz.torrent"
 
 # Changed modules
 # shellcheck disable=SC2034
