--- a/config/raspberry/rpi-defaults.conf
+++ b/config/raspberry/rpi-defaults.conf
@@ -1,9 +1,12 @@
 # Raspberry PiOS default configuration
 
-BASE_IMAGE_ENLARGEROOT=4500
-BASE_IMAGE_RESIZEROOT=600
+# Download Base Url
+DOWNLOAD_BASE_URL="https://downloads.raspberrypi.org"
+
+BASE_IMAGE_ENLARGEROOT="4500"
+BASE_IMAGE_RESIZEROOT="600"
 # Compress not needed due compression done in workflow
-BASE_RELEASE_COMPRESS=no
+BASE_RELEASE_COMPRESS="no"
 # Modules are valid for 32bit and 64bit images
 MODULES="base,pkgupgrade,udev_fix,mainsailos(net,piconfig,klipper,is_req_preinstall,moonraker,timelapse,mainsail,crowsnest,sonar,password-for-sudo),postrename"
 
