--- a/config/raspberry/rpi-32bit.conf
+++ b/config/raspberry/rpi-32bit.conf
@@ -5,8 +5,10 @@
 # DOWNLOAD_URL_IMAGE="https://downloads.raspberrypi.org/raspios_lite_armhf_latest.torrent"
 
 # New locations after Bullseye turned into 'oldstable'
-DOWNLOAD_URL_CHECKSUM="https://downloads.raspberrypi.com/raspios_oldstable_lite_armhf/images/raspios_oldstable_lite_armhf-2023-10-10/2023-05-03-raspios-bullseye-armhf-lite.img.xz.sha256"
-DOWNLOAD_URL_IMAGE="https://downloads.raspberrypi.com/raspios_oldstable_lite_armhf/images/raspios_oldstable_lite_armhf-2023-10-10/2023-05-03-raspios-bullseye-armhf-lite.img.xz.torrent"
+DOWNLOAD_BASE_URL="${DOWNLOAD_BASE_URL}/raspios_oldstable_lite_armhf/images/"
+DOWNLOAD_BASE_URL="${DOWNLOAD_BASE_URL}/raspios_oldstable_lite_armhf-2023-10-10/"
+DOWNLOAD_URL_CHECKSUM="${DOWNLOAD_BASE_URL}/2023-05-03-raspios-bullseye-armhf-lite.img.xz.sha256"
+DOWNLOAD_URL_IMAGE="${DOWNLOAD_BASE_URL}/2023-05-03-raspios-bullseye-armhf-lite.img.xz.torrent"
 
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
