--- a/.github/workflow_config.yml
+++ b/.github/workflow_config.yml
@@ -24,7 +24,7 @@ buildtest:
   # Raspberry Pi OS based images
   - raspberry/rpi-32bit
   - raspberry/rpi-64bit
-  # rpi 64 with KS
+  # rpi 64 with KlipperScreen
   - raspberry/rpi-64bit-klipperscreen
 
 # This is used to setup release build chain.
