--- a/config/armbian/bananapim2zero.conf
+++ b/config/armbian/bananapim2zero.conf
@@ -1,5 +1,7 @@
 # Banana Pi M2 Zero configuration
 
+BASE_ARCH=""
+
 # Image source
 DOWNLOAD_URL_CHECKSUM="${DOWNLOAD_BASE_URL}/armbian-bananapi_m2_zero_bullseye.img.xz.sha256"
 DOWNLOAD_URL_IMAGE="${DOWNLOAD_BASE_URL}/armbian-bananapi_m2_zero_bullseye.img.xz"
