chore: Initial changes to match yumi lab requirements (#1)
* chore: add Yumi sbc

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* fix: remove BASE_{USER,PASSWORD}

Currently klipper Module fails due renaming

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* fix: remove BASE_{USER,PASSWORD}

for SmartPad images

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: wip

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: wip

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: wip

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: wip

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: wip

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* test: test bugfix branch

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: wip

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: update release types

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: prepare YumiOS transition

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: change distribution name

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: remove json generation

This SBC can not be listed in rpi-imager, therefore it can be removed

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: remove json snipplets from default config

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: change base image urls

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: remove issue templates

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: change default password

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: removed uneccessary modules

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: removed uneccessary module piconfig

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: rename motd header

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: change mainsailos module ta match yumi brand

Signed-off-by: Stepha

--- a/src/modules/armbian_net/filesystem/root/boot/network_config.txt.template
+++ b/src/modules/armbian_net/filesystem/root/boot/network_config.txt.template
@@ -1,10 +1,13 @@
 #-----------------------------------------------------------------
 #
-# MainsailOS (armbian edition) Network Configuration
+# YumiOS Network Configuration
 # Set optional end user configuration
 #    - Rename this file from /boot/network_config.txt.template to /boot/network_config.txt
 #    - Settings below will be applied every time you reboot your machine.
 # Be aware, old configurations will be deleted!
+#
+# This is originaly based on work of mainsail-crew/MainsailOS
+# ( https://github.com/mainsail-crew/MainsailOS )
 #
 # This file is based on work of the armbian developer team
 # https://github.com/armbian/build/blob/master/packages/bsp/armbian_first_run.txt.template
