--- a/cliff.toml
+++ b/cliff.toml
@@ -47,7 +47,7 @@ footer = """
 
 # postprocessors
 postprocessors = [
-    { pattern = '<REPO>', replace = "https://github.com/mainsail-crew/MainsailOS" }, # replace repository URL
+    { pattern = '<REPO>', replace = "https://github.com/Yumi-Lab/YumiOS" }, # replace repository URL
 ]
 
 [git]
