chore: update label-actions
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/.github/label-actions.yml
+++ b/.github/label-actions.yml
@@ -3,24 +3,18 @@
 not an Issue:
   issues:
     comment: |
-      Ahoi!
+      Welcome!
 
       It looks like this ticket is a request for help (or similar).
       Many helpful people will not see your message here and you are
       unlikely to get a useful response.
 
       We use the Github Issue-Tracker only for development related
-      topics, like feature requests, bug reports etc. To get help,
-      please join our Discord-Server or ask in Github Discussions:
-
-      - [discord.gg/mainsail](https://discord.gg/mainsail)
-      - [GitHub Discussions](https://github.com/orgs/mainsail-crew/discussions)
-
+      topics, like feature requests, bug reports etc.
       This ticket will be automatically closed.
 
       Fair wind and a following sea!
-      ~ Your friendly MainsailGithubBot
+      ~ Your friendly Yumi-LabGithubBot
 
-      *PS: I'm just an automated script, not a real sailor.*
+      *PS: I'm just an automated script, not a real human.*
     close: true
-
