fix: try fix default boot theme
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/smartpad/config
+++ b/src/modules/smartpad/config
@@ -13,4 +13,5 @@
 
 [[ -n "$SMARTPAD_CONFIG_TXT_FILE" ]] || SMARTPAD_CONFIG_TXT_FILE="/boot/armbianEnv.txt"
 
-[ -n "$SMARTPAD_PLYMOUTH_REPO" ] || SMARTPAD_PLYMOUTH_REPO="https://github.com/Yumi-Lab/plymouth-themes.git"
+[[ -n "$SMARTPAD_PLYMOUTH_REPO" ]] || SMARTPAD_PLYMOUTH_REPO="https://github.com/Yumi-Lab/plymouth-themes.git"
+[[ -n "$SMARTPAD_PLYMOUTH_THEME" ]] || SMARTPAD_PLYMOUTH_THEME="hexagon_alt"
