fix: fix KlipperScreen preconfiguration
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/smartpad/filesystem/home/pi/printer_data/config/KlipperScreen.conf
+++ b/src/modules/smartpad/filesystem/home/pi/printer_data/config/KlipperScreen.conf
@@ -1,8 +1,5 @@
-#~# --- Do not edit below this line. This section is auto generated --- #~#
-#~#
-#~# [main]
-#~# theme = material-darker
-#~# screen_blanking = off
-#~# confirm_estop = True
-#~# use_dpms = False
-#~#
+[main]
+theme = material-darker
+screen_blanking = off
+confirm_estop = True
+use_dpms = False
