feat: add janus to YUMIOS_DEPS (#3)
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/yumios/config
+++ b/src/modules/yumios/config
@@ -14,4 +14,4 @@
 
 [ -n "$YUMIOS_DEPS" ] || YUMIOS_DEPS="python3-serial python3-opencv wavemon \
 hexedit tcpdump iptraf mc htop dcfldd nano usbutils ranger tldr ncdu \
-can-utils multitail fd-find lsof minicom"
+can-utils multitail fd-find lsof minicom janus"
