fix: fix boot mountpoint
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/config/config-defaults.conf
+++ b/config/config-defaults.conf
@@ -1,8 +1,9 @@
 # Build default configuration
 
 DIST_VERSION="1.3.2"
-# BASE_ZIP_IMG="$(get_img_name)"
 DIST_NAME="MainsailOS"
+
+BASE_BOOT_MOUNT_PATH=boot
 
 ### JSON sniplet Setup
 ### NOTE: Please see all config files for setup variables!!!
