test: add failing build for test
Will be removed after testing, due revert

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/.github/workflow_config.yml
+++ b/.github/workflow_config.yml
@@ -26,6 +26,8 @@ buildtest:
   - raspberry/rpi64
   # rpi 64 with KS
   - raspberry/rpi64-ks
+  # Fail Test (Will be removed)
+  - raspberry/rpi32-build-fail-test
 
 # This is used to setup release build chain.
 # Each entry will be used in setup matrix for releases
