--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Rename image file
         id: move-image
-        if: always()
+        if: ${{ success() }}
         shell: bash
         run: |
           source repository/src/config
@@ -79,10 +79,10 @@ jobs:
           echo "image=${IMAGE}" >> $GITHUB_OUTPUT
 
       - name: Upload failed Logfile
-        if: failure()
+        if: ${{ failure() && steps.build.conclusion == 'failure' }}
         uses: actions/upload-artifact@v4
         with:
-          name: failed-${{ steps.move-image.outputs.image }}.log
+          name: failed-${{ steps.build.outputs.type }}-${{ steps.build.outputs.sbc }}.log
           path: repository/src/build.log
 
       - name: Compressing Image
