--- a/.github/workflow_config.yml
+++ b/.github/workflow_config.yml
@@ -16,16 +16,16 @@
 
 buildtest:
   # armbian based images
-  - armbian/bananapim2zero
-  - armbian/orangepi3lts
+  # - armbian/bananapim2zero
+  # - armbian/orangepi3lts
   - armbian/orangepi4lts
-  - armbian/orangepi_zero2
+  # - armbian/orangepi_zero2
   # Orange Pi OS based images
   # Raspberry Pi OS based images
-  - raspberry/rpi32
-  - raspberry/rpi64
+  # - raspberry/rpi32
+  # - raspberry/rpi64
   # rpi 64 with KS
-  - raspberry/rpi64-ks
+  # - raspberry/rpi64-ks
 
 # This is used to setup release build chain.
 # Each entry will be used in setup matrix for releases
