test: test run for fix/armbiandns pr
This run is to proof function of https://github.com/guysoft/CustomPiOS/pull/226

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           config: ${{ matrix.config }}
           custompios-repository: KwadFan/CustomPiOS
-          custompios-ref: fix/chrootmount
+          custompios-ref: fix/armbiandns
 
       - name: Rename image file
         id: move-image
