--- a/cliff.toml
+++ b/cliff.toml
@@ -5,13 +5,13 @@
 header = """
 <!-- THIS FILE IS UPDATED AUTOMATICALLY, ANY CHANGES WILL BE OVERRIDDEN -->
 # Changelog
-All notable changes to MainsailOS will be documented in this file.\n
+All notable changes to G1OS will be documented in this file.\n
 """
 # template for the changelog body
 # https://tera.netlify.app/docs/#introduction
 body = """
 {% if version %}\
-    ## [{{ version | trim_start_matches(pat="v") }}](https://github.com/mainsail-crew/MainsailOS/releases/tag/{{version}}) - {{ timestamp | date(format="%Y-%m-%d") }}
+    ## [{{ version | trim_start_matches(pat="v") }}](https://github.com/gingeradditive/G1Os/releases/tag/{{version}}) - {{ timestamp | date(format="%Y-%m-%d") }}
 \
 {% else %}\
     ## [unreleased]
@@ -47,7 +47,7 @@ footer = """
 
 # postprocessors
 postprocessors = [
-    { pattern = '<REPO>', replace = "https://github.com/mainsail-crew/MainsailOS" }, # replace repository URL
+    { pattern = '<REPO>', replace = "https://github.com/gingeradditive/G1Os" }, # replace repository URL
 ]
 
 [git]
