disable rpi32 and rpi64-ks versions

--- a/.github/workflow_config.yml
+++ b/.github/workflow_config.yml
@@ -16,15 +16,15 @@
 
 buildtest:
   # Raspberry Pi OS based images
-  - raspberry/rpi32
+  # - raspberry/rpi32
   - raspberry/rpi64
   # rpi 64 with KS
-  - raspberry/rpi64-ks
+  # - raspberry/rpi64-ks
 
 # This is used to setup release build chain.
 # Each entry will be used in setup matrix for releases
 
 release:
   # Raspberry Pi OS based images
-  - raspberry/rpi32
+  # - raspberry/rpi32
   - raspberry/rpi64
