--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -140,7 +140,8 @@ jobs:
         uses: ./repository/.github/actions/build
         with:
           config: ${{ matrix.config }}
-
+          custompios-ref: 1.5.0
+          
       - name: Upload failed Logfile
         if: failure()
         uses: actions/upload-artifact@v4
